# mqtt-vehicle-fleet-sensor-data

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
mqtt_vehicle_fleet_sensor_data/: utils.py
mqtt_vehicle_fleet_sensor_data/iot/: sensors.py
mqtt_vehicle_fleet_sensor_data/publishers/: central_device.py  create_mqtt_publishers.py  telematic_control_unit.py  vehicle_base.py  vehicles.py
mqtt_vehicle_fleet_sensor_data/subscribers/: create_mqtt_subscriber.py  mqtt_sub_coords.py  mqtt_sub_vans.py  mqtt_subscriber.py
